--- a/index.html
+++ b/index.html
@@ -98,41 +98,9 @@
                             <input class="form-control" type="file" name="supply-demand">
                         </label>
                     </div>
-                    <div class="fst-italic">
-                        <span>In table "hourly supply and demand electricity load", </span>
-                        <ul>
-                            <li>Format: Accept *.csv file via uploading. All values
-                                except the first row should be numeric.
-                            </li>
-                            <li>Columns: The first column represents the demand load.
-                                The second and subsequent columns represent other source
-                                of supply load. If there is no other supplies, the table
-                                should only have the first column.
-                            </li>
-                            <li>Column names: Column names won't affect results, but the
-                                first row must be column names instead of data.</li>
-                            <li>Row names: Row names should not exist. </li>
-                            <li>Units: The unit must be corresponding to that of energy
-                                capacity of batteries. </li>
-                            <li>Order: Each row represents the load of 1 hour, from
-                                earliest to latest.</li>
-                        </ul>
-                    </div>
-                    <div style="overflow-x: auto;">
-                        <table class="simple_table">
-                        <thead><tr>
-                            <th>Demand</th>
-                            <th>Supply 1</th>
-                            <th>Supply 2</th>
-                            <th>...&nbsp;&nbsp;&nbsp;&nbsp;</th>
-                        </tr></thead>
-                        <tbody>
-                        <tr><td>D(0:00~1:00)</td><td>S1(0:00~1:00)</td><td>S2(0:00~1:00)</td><td>...</td></tr>
-                        <tr><td>D(1:00~2:00)</td><td>S1(1:00~2:00)</td><td>S2(1:00~2:00)</td><td>...</td></tr>
-                        <tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>
-                        </tbody>
-                        <caption>Example table</caption>
-                    </table>
+                    <div style="overflow-x: auto;" class="my-4">
+                        <p>Example table:</p>
+                        <img src="assets/supply_demand_tb _example.png" alt="Supply deman table's example" style="max-width: 100%;">
                     </div>
                 </div>
             </div>
